syntax = "proto3";

package vidmetadata;

import "google/protobuf/timestamp.proto";

enum VideoStatus {
  VIDEO_STATUS_UNSPECIFIED = 0;
  VIDEO_STATUS_UPLOADED = 1;
  VIDEO_STATUS_PROCESSING = 2;
  VIDEO_STATUS_COMPLETED = 3;
  VIDEO_STATUS_FAILED = 4;
}

enum FileFormat {
  FILE_FORMAT_UNSPECIFIED = 0;
  FILE_FORMAT_RAW = 1;
  FILE_FORMAT_480P = 2;
  FILE_FORMAT_720P = 3;
  FILE_FORMAT_1080P = 4;
  FILE_FORMAT_THUMBNAIL = 5;
  FILE_FORMAT_POSTER = 6;
}

service VidMetadata {
  rpc CreateVideo (CreateVideoRequest) returns (CreateVideoResponse);
  rpc UpdateVideoStatus (UpdateVideoStatusRequest) returns (UpdateVideoStatusResponse);
  rpc GetVideo (GetVideoRequest) returns (GetVideoResponse);
  rpc ListUserVideos (ListUserVideosRequest) returns (ListUserVideosResponse);
  rpc CreateVideoFile (CreateVideoFileRequest) returns (CreateVideoFileResponse);
  rpc CreateTranscript (CreateTranscriptRequest) returns (CreateTranscriptResponse);
  rpc GetTranscript (GetTranscriptRequest) returns (GetTranscriptResponse);
}

message CreateVideoRequest {
  string user_id = 1;
  string title = 2;
  string original_resolution = 3;
  int32 duration = 4;
}

message CreateVideoResponse {
  string video_id = 1;
}

message UpdateVideoStatusRequest {
  reserved 2;
  string video_id = 1;
  optional string error_message = 3;
  VideoStatus status = 4;
}

message UpdateVideoStatusResponse {
  bool success = 1;
}

message GetVideoRequest {
  string video_id = 1;
}

message VideoFile {
  reserved 2;
  string id = 1;
  string s3_key = 3;
  int64 file_size = 4;
  FileFormat format = 5;
  google.protobuf.Timestamp created_at = 6;
}

message Video {
  reserved 4, 8, 9, 10;
  string id = 1;
  string user_id = 2;
  string title = 3;
  optional string error_message = 5;
  string original_resolution = 6;
  int32 duration = 7;
  repeated VideoFile files = 11;
  VideoStatus status = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
  google.protobuf.Timestamp completed_at = 15;
}

message GetVideoResponse {
  Video video = 1;
}

message ListUserVideosRequest {
  string user_id = 1;
}

message ListUserVideosResponse {
  repeated Video videos = 1;
}

message CreateVideoFileRequest {
  reserved 2;
  string video_id = 1;
  string s3_key = 3;
  int64 file_size = 4;
  FileFormat format = 5;
}

message CreateVideoFileResponse {
  string file_id = 1;
}

message VideoTranscript {
  string id = 1;
  string video_id = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
}

message CreateTranscriptRequest {
  string video_id = 1;
  string content = 2;
}

message CreateTranscriptResponse {
  string transcript_id = 1;
}

message GetTranscriptRequest {
  string video_id = 1;
}

message GetTranscriptResponse {
  VideoTranscript transcript = 1;
}